--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,6 @@
-
-<div class="parent"> 
-    <div class="container" [ngClass]="isSignDivVisiable ? 'active' :'' " id="container">
-        <div class="form-container sign-up" >
+<div class="parent">
+    <div class="container">
+        <div class="form-container sign-up">
             <form>
                 <h1>Create Account</h1>
                 <div class="social-icons">
@@ -11,13 +10,13 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registeration</span>
-                <input type="text" name="name" [(ngModel)]="signUpObj.name" placeholder="Name">
-                <input type="email" name="email" [(ngModel)]="signUpObj.email" placeholder="Email">
-                <input type="password" name="password"  [(ngModel)]="signUpObj.password" placeholder="Password">
-                <button (click)="onRegister()">Sign Up</button>
+                <input type="text" name="name" placeholder="Name">
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
+                <button>Sign Up</button>
             </form>
         </div>
-        <div class="form-container sign-in" >
+        <div class="form-container sign-in">
             <form>
                 <h1>Sign In</h1>
                 <div class="social-icons">
@@ -27,10 +26,10 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" name="email" [(ngModel)]="loginObj.email" placeholder="Email">
-                <input type="password" name="password"   [(ngModel)]="loginObj.password" placeholder="Password">
+                <input type="email" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
                 <a href="#">→ Forget Your Password? ←</a>
-                <button (click)="onLogin()">Sign In</button>
+                <button>Sign In</button>
             </form>
         </div>
         <div class="toggle-container">
@@ -38,15 +37,15 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome Back!</h1>
                     <p>Enter your personal details to use all of site features</p>
-                    <button type="button" class="hidden" id="login" (click)="isSignDivVisiable = false">Sign In</button>
+                    <button type="button" class="hidden" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Friend!</h1>
                     <p>Register with your personal details to use all of site features</p>
-                    <button type="button" class="hidden" id="register" (click)="isSignDivVisiable = true">Sign Up</button>
+                    <button type="button" class="hidden" id="register">Sign
+                        Up</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
