--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,10 +10,10 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registeration</span>
-                <input type="text" name="name" placeholder="Name">
-                <input type="email" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Password">
-                <button>Sign Up</button>
+                <input type="text" name="name" [(ngModel)]="signUpObj.name" placeholder="Name">
+                <input type="email" name="email" [(ngModel)]="signUpObj.email" placeholder="Email">
+                <input type="password" name="password" [(ngModel)]="signUpObj.password" placeholder="Password">
+                <button (click)="onRegister()">Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
@@ -26,8 +26,8 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Password">
+                <input type="email" name="email" [(ngModel)]="loginObj.email" placeholder="Email">
+                <input type="password" name="password" [(ngModel)]="loginObj.password" placeholder="Password">
                 <a href="#">→ Forget Your Password? ←</a>
                 <button>Sign In</button>
             </form>
@@ -42,7 +42,7 @@
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Friend!</h1>
                     <p>Register with your personal details to use all of site features</p>
-                    <button type="button" class="hidden" id="register" (click)="isRightDivShown = true">Sign
+                    <button type="button" class="hidden" id="register" (click)="isRightDivShown = true">Signy
                         Up</button>
                 </div>
             </div>
